WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
282716
[WebGPU Swift] Fix build and remove RefCounted.h ifdef
https://bugs.webkit.org/show_bug.cgi?id=282716
Summary
[WebGPU Swift] Fix build and remove RefCounted.h ifdef
Elliott Williams
Reported
2024-11-06 14:23:05 PST
Build is broken on main
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-06 14:23:18 PST
<
rdar://problem/139385377
>
EWS
Comment 2
2024-11-06 15:59:03 PST
Committed
286255@main
(438b43365c21): <
https://commits.webkit.org/286255@main
> Reviewed commits have been landed. Closing PR #36288 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug