[WebGPU Swift] Fix static assert due to missing RefPtr members rdar://139385377 https://bugs.webkit.org/show_bug.cgi?id=282716

Unreviewed. A missing import of CommandEncoder.h is causing swift to
fail to import enough of WebGPU::CommandBuffer to satisfy static
assertions. Fixes this error:

    WebKitBuild/Debug/usr/local/include/wtf/WeakPtr.h:91:13: error: static assertion failed due to requirement 'HasRefPtrMethods<WebGPU::CommandBuffer>::value || HasCheckedPtrMethods<WebGPU::CommandBuffer>::value || IsDeprecatedWeakRefSmartPointerException<WebGPU::CommandBuffer>::value': Classes that offer weak pointers should also offer RefPtr or CheckedPtr. Please do not add new exceptions.
                HasRefPtrMethods<T>::value || HasCheckedPtrMethods<T>::value || IsDeprecatedWeakRefSmartPointerException<std::remove_cv_t<T>>::value,
                ^
    Source/WebGPU/WebGPU/CommandEncoder.h:136:95: note: in instantiation of member function 'WTF::WeakPtr<WebGPU::CommandBuffer>::get' requested here
        RefPtr<CommandBuffer> protectedCachedCommandBuffer() const { return m_cachedCommandBuffer.get(); }
                                                                                                  ^
    <module-includes>:2:9: note: in file included from <module-includes>:2:
    #import "Headers/WebGPUExt.h"
            ^
    WebKitBuild/Debug/WebGPU.framework/Headers/WebGPUExt.h:170:10: note: in file included from WebKitBuild/Debug/WebGPU.framework/Headers/WebGPUExt.h:170:
    #include "Buffer.h"
             ^
    Source/WebGPU/WebGPU/Buffer.h:28:9: note: in file included from Source/WebGPU/WebGPU/Buffer.h:28:
    #import "Instance.h"
            ^
    Source/WebGPU/WebGPU/Instance.h:38:9: note: in file included from Source/WebGPU/WebGPU/Instance.h:38:
    #import <wtf/WeakPtr.h>
            ^

* Source/WebGPU/WebGPU/CommandEncoder.h:

Canonical link: https://commits.webkit.org/286255@main